@@ -18,14 +18,14 @@ char *dumb_os_mmap(size_t length)
 	void *memory;
 
 	/*
-	   fprintf(stderr, "requesting %" FMT_SIZE_T " bytes.\n", length);
+	   fprintf(stderr, "requesting " FMT_SIZE_T " bytes.\n", length);
 	 */
 
 	memory = mmap(NULL, length, PROT_READ | PROT_WRITE,
 		      MAP_PRIVATE | MAP_ANONYMOUS, -1, 0);
 
 	if (!memory) {
-		fprintf(stderr, "Could not allocate %" FMT_SIZE_T " bytes\n",
+		fprintf(stderr, "Could not allocate " FMT_SIZE_T " bytes\n",
 			(CAST_SIZE_T) length);
 	}
 
